@@ -1,3 +1,9 @@
+2005-01-13  Earnie Boyd  <earnie@users.sf.net>
+
+	* include/sys/stat.h (_S_IFLNK, S_IFLNK, _S_ISLNK, S_ISLNK, _lstat,
+	lstat): Remove.
+	* include/errno.h (ELOOP): Ditto.
+
 2005-01-11  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/tchar.h (_tfreopen): Add UNICODE mappings.
